renomma ge des fichier sans espaces

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,17 +1,19 @@
-
 body {
     box-sizing: border-box;
-    max-width:425px;
-    margin:auto;
+    max-width: 425px;
+    margin: auto;
     background: $colour-primary;
-    font-family: -webkit-pictograph;  /* passer en roboto, mais ce n'est pas la meme que sur la maquette ???? */
+    font-family: roboto;
+    /* passer en roboto, mais ce n'est pas la meme que sur la maquette ???? */
 }
+
 a,
 a:active,
-a:hover{
+a:hover {
     text-decoration: none;
-    color:black;
+    color: black;
 }
-html{
-    background-color: darken($colour-primary,35);
+
+html {
+    background-color: darken($colour-primary, 35);
 }
