--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,89 +1,80 @@
-.menu{
+.menu {
     background: $colour-secondary;
     border-radius: 40px 40px 0 0;
     position: relative;
     top: -30px;
     margin-bottom: -30px;
-    &__top{
+    &__top {
         display: flex;
         justify-content: space-between;
         padding-top: 20px;
-        &__titre{
-            padding-left:50px;
+        &__titre {
+            padding-left: 50px;
             font-family: 'Shrikhand';
             font-size: 1.8em;
         }
-        &__image{
+        &__image {
             @include logoHeart;
-            font-size:1.2em;
-
+            font-size: 1.2em;
         }
     }
-    &__card{
-        
-    padding-bottom: 10px;
-
-
-        &__titre{
+    &__card {
+        padding-bottom: 10px;
+        cursor: pointer;
+        &__titre {
             width: 40px;
             font-size: 1.5em;
             padding-left: 20px;
             padding-bottom: 5px;
-            
-            & p{
+            & p {
                 width: 40px;
                 border-bottom: 4px $colour-3 solid;
-                margin-bottom:0px ;
+                margin-bottom: 0px;
             }
         }
-        &__plat{
+        &__plat {
             display: flex;
             border-radius: 20px;
             background: $colour-primary;
-            margin:20px;
-            height:80px;
-            box-shadow:$box-shadow;
+            margin: 20px;
+            height: 80px;
+            box-shadow: $box-shadow;
             flex-wrap: nowrap;
-            overflow:hidden ;
-            
-
-            &__texte{
+            overflow: hidden;
+            &__texte {
                 display: flex;
                 flex-direction: column;
-                min-width:80%;
+                min-width: 80%;
                 justify-content: center;
-                padding-left:20px;
+                padding-left: 20px;
                 transform-origin: left;
                 transition: all 400ms ease-in-out;
                 white-space: nowrap;
-                
-                &__titre{
-                    
+                &__titre {
                     font-weight: bold;
-                    font-size: 17px;                
-                    
+                    font-size: 17px;
                 }
-                &__description{
+                &__description {
                     font-size: 15px;
                 }
             }
-            &__texte p{
-                margin:0;
+            &__texte p {
+                margin: 0;
                 text-overflow: ellipsis;
                 overflow: hidden;
             }
-            &__prix{
+            &__prix {
                 align-self: flex-end;
                 font-weight: bold;
-                min-width:20%;
-                transition: all 300ms linear 100ms;              
+                min-width: 20%;
+                transition: all 300ms linear 100ms;
                 padding-left: 10px;
             }
-            &__valider{
-                opacity:0;
+            &__valider {
+                opacity: 0;
                 font-size: 1.5em;
                 background-color: $colour-3;
-                color:$colour-primary;
+                color: $colour-primary;
                 transition: all 400ms linear;
                 min-width: 20%;
                 transform: translateX(0px);
@@ -93,67 +84,63 @@
                 justify-content: center;
                 text-align: center;
                 float: right;
-                &__check{
-                    transition:all 200ms ease-in-out 200ms;
+                &__check {
+                    transition: all 200ms ease-in-out 200ms;
                     transform: rotate(0deg);
                 }
-            
             }
-            &:hover .menu__card__plat__valider{
-                opacity:1;
+            &:hover .menu__card__plat__valider {
+                opacity: 1;
                 transform: translateX(-60%);
-               
             }
-            &:hover .menu__card__plat__valider__check{
+            &:hover .menu__card__plat__valider__check {
                 transform: rotate(360deg);
-               
             }
-            &:hover .menu__card__plat__texte{
-                
-           min-width:65%;
-                
+            &:hover .menu__card__plat__texte {
+                min-width: 65%;
             }
-            
-            &:hover .menu__card__plat__prix{
+            &:hover .menu__card__plat__prix {
                 transform: translateX(-10%);
-
             }
         }
-        
     }
-    &__bottom{
+    &__bottom {
         display: flex;
         justify-content: center;
         height: 200px;
         align-content: center;
-        &__bouton{
+        &__bouton {
             @include bouton;
-            font-size:1.2em;
-            width: 200px;;
-            margin:80px;
+            font-size: 1.2em;
+            width: 200px;
+            ;
+            margin: 80px;
             padding-left: 40px;
             box-shadow: $box-shadow;
-
         }
     }
-    
+}
 
-}
-#imageRestaurant1{
+#imageRestaurant1 {
     background-image: url(../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
-    background-size: cover; 
-    height: 300px;
-}#imageRestaurant2{
-    background-image: url(../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
-    background-size: cover; 
+    background-size: cover;
     height: 300px;
 }
-#imageRestaurant3{
-    background-image: url(../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
-    background-size: cover; 
+
+#imageRestaurant2 {
+    background-image: url(../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+    background-size: cover;
     height: 300px;
-}#imageRestaurant4{
+}
+
+#imageRestaurant3 {
+    background-image: url(../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
+    background-size: cover;
+    height: 300px;
+}
+
+#imageRestaurant4 {
     background-image: url(../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
-    background-size: cover; 
+    background-size: cover;
     height: 300px;
 }
