--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -1,74 +1,68 @@
-.restaurant{
-    background:$colour-secondary; 
-    padding:20px;
-    &__titre{
-    font-size: 2em;
-    font-weight: bold;
+.restaurant {
+    background: $colour-secondary;
+    padding: 20px;
+    &__titre {
+        font-size: 2em;
+        font-weight: bold;
     }
-    &__card{
-        margin-top:20px;
+    &__card {
+        margin-top: 20px;
         border-radius: 20px;
-        background:$colour-primary ;
-        box-shadow:$box-shadow;
-
-        &__image{
+        background: $colour-primary;
+        box-shadow: $box-shadow;
+        &__image {
             background-size: cover;
-            height:200px;
+            height: 200px;
             border-radius: 20px 20px 0 0;
-            &__status{
-                color: darken($colour-3,35);
-                background:$colour-3;
-                width:100px;
+            &__status {
+                color: darken($colour-3, 35);
+                background: $colour-3;
+                width: 100px;
                 position: relative;
                 float: right;
                 right: 15px;
-                top:15px;
+                top: 15px;
                 text-align: center;
                 font-weight: bold;
                 border-radius: 3px;
             }
         }
-        &__description{
-            display:flex;
+        &__description {
+            display: flex;
             justify-content: space-between;
-            width:100%;
-
-            &__texte{
-                & p{
+            width: 100%;
+            &__texte {
+                & p {
                     margin: 0;
                 }
                 display:flex;
                 flex-direction:column;
-                 padding: 20px;
-                 padding-left:15px;
-                &__titre{
+                padding: 20px;
+                padding-left:15px;
+                &__titre {
                     font-weight: bold;
-                  
                 }
-                &__localisation{
-
-                }
+                &__localisation {}
             }
-            &__logo{
-               @include logoHeart;
-               
-            }    
+            &__logo {
+                @include logoHeart;
+            }
         }
-
-
     }
-
 }
 
-#imageRestaurant1{
-    background-image: url(../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg); 
+#imageRestaurant1 {
+    background-image: url(../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
 }
-#imageRestaurant2{
-    background-image: url(../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg); 
+
+#imageRestaurant2 {
+    background-image: url(../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
 }
-#imageRestaurant3{
-    background-image: url(../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg); 
+
+#imageRestaurant3 {
+    background-image: url(../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
 }
-#imageRestaurant4{
-    background-image: url(../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg); 
+
+#imageRestaurant4 {
+    background-image: url(../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
 }
