--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,83 +1,188 @@
     @keyframes fadein {
-        from { opacity: 0; }
-        to { opacity: 1; } } 
-         
-    @-moz-keyframes fadein { 
-        from { opacity: 0; } 
-        to { opacity: 1; } } 
-      
-    @-webkit-keyframes fadein { 
-        from { opacity: 0; }
-        to { opacity: 1; } } 
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+    
+    @-moz-keyframes fadein {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+    
+    @-webkit-keyframes fadein {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+    
     @keyframes growUp {
-        from { transform: scaleX(0); }
-        to { transform: scaleX(1) } } 
-         
-    @-moz-keyframes growUp { 
-        from { transform: scaleX(0); }
-        to { transform: scaleX(1) } }  
-      
-    @-webkit-keyframes growUp { 
-        from { transform: scaleX(0); }
-        to { transform: scaleX(1) } }   
-      
-
+        from {
+            transform: scaleX(0);
+        }
+        to {
+            transform: scaleX(1)
+        }
+    }
+    
+    @-moz-keyframes growUp {
+        from {
+            transform: scaleX(0);
+        }
+        to {
+            transform: scaleX(1)
+        }
+    }
+    
+    @-webkit-keyframes growUp {
+        from {
+            transform: scaleX(0);
+        }
+        to {
+            transform: scaleX(1)
+        }
+    }
+    
     @keyframes comeIn {
-        from { transform: translateY(50px); }
-        to { transform: translateY(0px); } } 
-        
+        from {
+            transform: translateY(50px);
+        }
+        to {
+            transform: translateY(0px);
+        }
+    }
+    
     @-moz-keyframes comeIn {
-        from { transform: translateY(50px); }
-        to { transform: translateY(0px); } } 
-     
+        from {
+            transform: translateY(50px);
+        }
+        to {
+            transform: translateY(0px);
+        }
+    }
+    
     @-webkit-keyframes comeIn {
-        from { transform: translateY(50px); }
-        to { transform: translateY(0px); } } 
-
-
-
-        
-@keyframes spin {
-    from { transform:rotate(0deg); }
-    to { transform:rotate(360deg); } } 
+        from {
+            transform: translateY(50px);
+        }
+        to {
+            transform: translateY(0px);
+        }
+    }
+    
     @keyframes spin {
-        from { transform:rotate(0deg); }
-        to { transform:rotate(360deg); } } 
-        @-webkit-keyframes spin {
-            from { transform:rotate(0deg); }
-            to { transform:rotate(360deg); } } 
-@keyframes spinOppose {
-    from { transform:rotate(720deg); }
-    to { transform:rotate(0deg); } } 
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+    
+    @keyframes spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+    
+    @-webkit-keyframes spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+    
     @keyframes spinOppose {
-        from { transform:rotate(720deg); }
-        to { transform:rotate(0deg); } } 
-        @-webkit-keyframes spinOppose {
-            from { transform:rotate(720deg); }
-            to { transform:rotate(0deg); } } 
-
-
-
-
-@keyframes fadeOut {
-    from { opacity: 1; }
-    to { opacity: 0; } } 
+        from {
+            transform: rotate(720deg);
+        }
+        to {
+            transform: rotate(0deg);
+        }
+    }
+    
+    @keyframes spinOppose {
+        from {
+            transform: rotate(720deg);
+        }
+        to {
+            transform: rotate(0deg);
+        }
+    }
+    
+    @-webkit-keyframes spinOppose {
+        from {
+            transform: rotate(720deg);
+        }
+        to {
+            transform: rotate(0deg);
+        }
+    }
+    
+    @keyframes fadeOut {
+        from {
+            opacity: 1;
+        }
+        to {
+            opacity: 0;
+        }
+    }
+    
     @-moz-keyframes fadeOut {
-        from { opacity: 1; }
-        to { opacity: 0; } } 
-        @-webkit-keyframes fadeOut {
-            from { opacity: 1; }
-            to { opacity: 0; } } 
-
-
-
-
- @keyframes headerUp {
-     from {transform:translateY(150px); }
-     to { transform:translateY(0px)} } 
-     @-moz-keyframes headerUp {
-        from {transform:translateY(150px); }
-        to { transform:translateY(0px)} } 
-        @-webkit-keyframes headerUp {
-            from {transform:translateY(150px); }
-            to { transform:translateY(0px)} } 
+        from {
+            opacity: 1;
+        }
+        to {
+            opacity: 0;
+        }
+    }
+    
+    @-webkit-keyframes fadeOut {
+        from {
+            opacity: 1;
+        }
+        to {
+            opacity: 0;
+        }
+    }
+    
+    @keyframes headerUp {
+        from {
+            transform: translateY(150px);
+        }
+        to {
+            transform: translateY(0px)
+        }
+    }
+    
+    @-moz-keyframes headerUp {
+        from {
+            transform: translateY(150px);
+        }
+        to {
+            transform: translateY(0px)
+        }
+    }
+    
+    @-webkit-keyframes headerUp {
+        from {
+            transform: translateY(150px);
+        }
+        to {
+            transform: translateY(0px)
+        }
+    }
