--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -12,7 +12,7 @@
         box-shadow: $box-shadow;
         &__image {
             background-size: cover;
-            height: 200px;
+            max-height: 250px;
             border-radius: 20px 20px 0 0;
             &__status {
                 color: darken($colour-3, 35);
@@ -41,6 +41,7 @@
                 padding-left:15px;
                 &__titre {
                     font-weight: bold;
+                    padding-bottom: 5px;
                 }
                 &__localisation {}
             }
