finalisation du projet et ajout du mode plein ecran

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,7 +1,5 @@
 body {
-    box-sizing: border-box;
-    max-width: 425px;
-    margin: auto;
+    margin: 0px;
     background: $colour-primary;
     font-family: roboto;
     /* passer en roboto, mais ce n'est pas la meme que sur la maquette ???? */
