--- a/sass/layout/_fonctionnement.scss
+++ b/sass/layout/_fonctionnement.scss
@@ -10,6 +10,7 @@
         margin: 15px;
         margin-left: 25px;
         display: flex;
+        align-items: center;
         border-radius: 20px;
         height: 60px;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
@@ -21,8 +22,11 @@
             height: 25px;
             width: 25px;
             color: $colour-primary;
-            transform: translate(-13px, 18px);
+            transform: translate(-13px, 0px);
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         &__image {
             display: flex;
