--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 50px;
+    font-size: 1.3em;
+    // height: 60px;
     color: $colour-primary;
     background: linear-gradient($colour-2, $colour-1);
     border-radius: 50px;
@@ -10,7 +11,7 @@
     margin-bottom: 50px;
     transition: all 400ms ease-in-out;
     box-shadow: $box-shadow;
-    padding: 4px 28px;
+    padding: 20px 28px;
     cursor: pointer;
     & p {
         transition: all 400ms ease-in-out;
