--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -45,6 +45,7 @@
         position: relative;
         top: 50%;
         transition: all 400ms ease-in-out;
+        left: 5%;
     }
     &__2 {
         display: inline-block;
@@ -55,5 +56,6 @@
         top: -50%;
         opacity: 0;
         transition: all 400ms ease-in-out;
+        left: 5%;
     }
 }
